wk_taa_taaqa/src/objects/ReplicationMonitoringLog__c.object
<CustomObject>
    <fields>
        <fullName>LocalRecordID__c</fullName>
        <label>Local Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectID__c</fullName>
        <label>ObjectID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerNetworkRecord_StartDate__c</fullName>
        <description>This field will hold Date / Time stamp from Partner Network Record reference to calculate the round trip time</description>
        <label>PartnerNetworkRecord_StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RequestDateTime__c</fullName>
        <label>RequestDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeTaken__c</fullName>
        <formula>(DATETIMEVALUE(PartnerNetworkRecord_StartDate__c) - DATETIMEVALUE(RequestDateTime__c))*24*60*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeTaken (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ReplicationMonitoringLog</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>ReplicationMonitoringLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReplicationMonitoringLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>